implement GitHub profile fetching functionality and enhance UI

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
           type="text"
           id="username"
           placeholder="Enter GitHub username..."
-          value="zeiadhabbab"
+          value="ghaida-jaaisa"
           required
         />
-        <button type="submit" class="btn">Fetch Profile</button>
+        <button type="submit" class="btn" id="fetchBtn">Fetch Profile</button>
       </form>
 
-      <div id="profile" class="profile-card"></div>
+      <div id="profile" class="profile-card">
+        
+      </div>
     </main>
   </body>
 </html>
