feat: update README, enhance HTML structure, and add profile rendering logic

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub Profile Viewer</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="magnifying-glass-solid-full.svg" type="image/x-icon">
     <script src="main.js" defer></script>
   </head>
   <body>
@@ -20,10 +21,10 @@
         />
         <button type="submit" class="btn" id="fetchBtn">Fetch Profile</button>
       </form>
-
-      <div id="profile" class="profile-card">
-        
-      </div>
+      <section id="userData">
+        <!-- <div class="avatar"></div> -->
+        <div id="profile" class="profile-card"></div>
+      </section>
     </main>
   </body>
 </html>
