feat: update profile rendering logic, enhance styles, and improve avatar display

--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
       <section id="userData">
         <div id="profile-card">
           <div class="profile-avatar-wrapper">
-            <img
-              src="user-icon-vector-profile-solid.webp"
-              alt=""
-              class="profile-img"
-            />
+            <img src="" alt="profile-avatar" class="profile-img" />
           </div>
-          <h2 id="name">Ghaida</h2>
-          <p id="bio">22</p>
-          <p id="company">AAUP</p>
+          <h2 id="name"></h2>
+          <p id="bio"></p>
+          <p id="company"></p>
         </div>
         <div id="profile" class="profile-details"></div>
       </section>
