feat: add follower and following info display with styles and icons

--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
           <h2 id="name"></h2>
           <p id="bio"></p>
           <p id="company"></p>
+          <div id="follow-info">
+            <div id="followers" class="follow">
+              <img src="arrow-turn-down-solid-full.svg" alt="" />
+              <span class="stat"> Follower </span>
+              <span class="number">50</span>
+            </div>
+            <div id="following" class="follow">
+              <img src="arrow-turn-up-solid-full.svg" alt="" />
+              <span class="stat"> Following </span>
+              <span class="number">78</span>
+            </div>
+          </div>
+          <p id="location">📍 Palestine</p>
         </div>
         <div id="profile" class="profile-details"></div>
       </section>
