WIP: not finished

--- a/index.html
+++ b/index.html
@@ -35,19 +35,30 @@
           <p id="company"></p>
           <div id="follow-info">
             <div id="followers" class="follow">
-              <img src="arrow-turn-down-solid-full.svg" alt="" />
+              <img
+                src="arrow-turn-down-solid-full.svg"
+                alt="arrow-turn-down_icon"
+              />
               <span class="stat"> Follower </span>
-              <span class="number">50</span>
+              <span class="number"></span>
             </div>
             <div id="following" class="follow">
-              <img src="arrow-turn-up-solid-full.svg" alt="" />
+              <img
+                src="arrow-turn-up-solid-full.svg"
+                alt="arrow_turn_up_icon"
+              />
               <span class="stat"> Following </span>
-              <span class="number">78</span>
+              <span class="number"></span>
             </div>
           </div>
-          <p id="location">📍 Palestine</p>
+          <div id="location-info">
+            <span>
+              <img src="location.svg" alt="location" id="location-img" />
+            </span>
+            <span id="location"></span>
+          </div>
         </div>
-        <div id="profile" class="profile-details"></div>
+        <div id="profile" class="profile-repositories"></div>
       </section>
     </main>
 
