feat: add skeleton loading UI for profile repositories

--- a/repo-card.html
+++ b/repo-card.html
@@ -1,15 +1,14 @@
 <div class="profile-repo">
-  <h3>repoName_here</h3>
+  <h3 class="skeleton-text">repoName_here</h3>
 
-  <p>repoDescription_here</p>
+  <p class="skeleton-text">repoDescription_here</p>
 
-  <div class="info">
+  <div class="info skeleton-text" >
     <div class="starContainer">
-      <img src="star-solid-full.svg" alt="star icon" />
+      <!-- <img src="star-solid-full.svg" alt="star icon" /> -->
       <span>Star</span>
       <span class="starCount">starCount_here</span>
     </div>
-
     <a class="repo_link" href="repoURL_here" target="_blank"> View Repo </a>
   </div>
 </div>
