--- a/index.html
+++ b/index.html
@@ -58,7 +58,25 @@
             <span id="location"></span>
           </div>
         </div>
-        <div id="profile" class="profile-repositories"></div>
+        <div id="profile" class="profile-repositories">
+          <template id="skeleton-profile-repo">
+            <div class="profile-repo skeleton-profile-repo">
+              <h3 class="skeleton-title">
+                <div class="skeleton skeleton-text"></div>
+                <div class="skeleton skeleton-text"></div>
+              </h3>
+
+              <div class="skeleton skeleton-text"></div>
+              <div class="skeleton skeleton-text"></div>
+              <div class="skeleton skeleton-text"></div>
+
+              <div class="btnContainer">
+                <div class="skeleton skeleton-btn"></div>
+                <div class="skeleton skeleton-btn"></div>
+              </div>
+            </div>
+          </template>
+        </div>
       </section>
     </main>
 
