feat: replace "Back To Top" button with up-chevron icon for improved UI

--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
       </section>
     </main>
 
-    <button class="btn" id="backToTop">Back To Top</button>
+    <img src="up-chevron.svg" alt="up-chevron" id="up-chevron">
   </body>
 </html>
