refactor: re-structure project files

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div id="follow-info">
             <div id="followers" class="follow">
               <img
-                src="arrow-turn-down-solid-full.svg"
+                src="imgs/arrow-turn-down-solid-full.svg"
                 alt="arrow-turn-down_icon"
               />
               <span class="stat"> Follower </span>
@@ -44,7 +44,7 @@
             </div>
             <div id="following" class="follow">
               <img
-                src="arrow-turn-up-solid-full.svg"
+                src="imgs/arrow-turn-up-solid-full.svg"
                 alt="arrow_turn_up_icon"
               />
               <span class="stat"> Following </span>
@@ -53,7 +53,7 @@
           </div>
           <div id="location-info">
             <span>
-              <img src="location.svg" alt="location" id="location-img" />
+              <img src="imgs/location.svg" alt="location" id="location-img" />
             </span>
             <span id="location"></span>
           </div>
@@ -80,6 +80,6 @@
       </section>
     </main>
 
-    <img src="up-chevron.svg" alt="up-chevron" id="up-chevron">
+    <img src="imgs/up-chevron.svg" alt="up-chevron" id="up-chevron">
   </body>
 </html>
